@@ -1651,6 +1651,13 @@ void jshEnableWatchDog(JsVarFloat timeout) {
 
 void jshKickWatchDog() {
   NRF_WDT->RR[0] = 0x6E524635;
+#ifdef BANGLEJS
+  /* If we're busy and really don't want to be interrupted (eg clearing flash memory)
+   then we should *NOT* allow the home button to set EXEC_INTERRUPTED (which happens
+   if it was held, JSBT_RESET was set, and then 0.1s later it wasn't handled). */
+  void jswrap_banglejs_kickPollWatchdog();
+  jswrap_banglejs_kickPollWatchdog();
+#endif
 }
 
 /** Check the pin associated with this EXTI - return true if it is a 1 */
